plugins {
    id 'java'
    id 'org.springframework.boot' version '2.6.7'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.startup'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}


repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.session:spring-session-core'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation ('io.minio:minio:8.5.11') {
        exclude group: 'com.squareup.okhttp3', module: 'okhttp'
    }
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
    implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.5'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.0'
    implementation(platform("org.springdoc:springdoc-openapi:2.0.2")) {
        exclude group: 'com.squareup.okhttp3', module: 'okhttp'
    }
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
    implementation 'org.springframework.boot:spring-boot-starter-parent:2.4.0'
    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
    implementation 'org.mapstruct:mapstruct-processor:1.4.2.Final'
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation group: 'com.h2database', name: 'h2', version: '2.1.212'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.2.0.RELEASE'


}

tasks.named('test') {
    useJUnitPlatform()
}

